<resources>
    <string name="app_name">RozaLotus</string>
    <string name="todo">TODO</string>
    <string name="todo0">TODO</string>
    <string name="todo1">TODO</string>
    <string name="hi">ПРИВЕТ</string>
    <string name="n_n">Наслаждайся отборочными.\n Будь внимателен.\n Делай хорошо.</string>
    <string name="enterVxod">Войти в аккаунт</string>
    <string name="todo3">TODO</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in1">Sign in</string>
    <string name="todo4">TODO</string>
    <string name="emil">С возвращением, Эмиль!</string>
    <string name="vopros">Каким ты себя ощущаешь сегодня?</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="zagolovok">Заголовок блока</string>
    <string name="n">Кратенькое описание\nблока с двумя строчками</string>
    <string name="podrobno">подбробнее</string>
    <string name="todo8">TODO</string>
    <string name="todo9">TODO</string>
    <string name="todo10">TODO</string>
    <string name="todo11">TODO</string>
    <string name="todo12">TODO</string>
    <string name="todo13">TODO</string>
    <string name="todo14">TODO</string>
    <string name="todo15">TODO</string>
    <string name="todo16">TODO</string>
    <string name="todo17">TODO</string>
    <string name="todo18">TODO</string>
    <string name="todo19">TODO</string>
    <string name="spok">Спокойным</string>
    <string name="raslb">Расслабленным</string>
    <string name="sosred">Сосредоточеным</string>
    <string name="vzolnov">Взволнованным</string>
    <string name="todo20">TODO</string>
    <string name="todo21">TODO</string>
    <string name="todo22">TODO</string>
    <string name="todo23">TODO</string>
    <string name="todo24">TODO</string>
    <string name="todo25">TODO</string>
</resources>