<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#253334"
    tools:context=".TabloActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="287dp"
        android:layout_height="36dp"
        android:fontFamily="serif"
        android:text="@string/emil"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.167" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="258dp"
        android:layout_height="30dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/vopros"
        android:textAlignment="center"
        android:textColor="#979797"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0" />


    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="369dp"
        android:layout_height="222dp"
        android:contentDescription="@string/todo6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.579"
        app:srcCompat="@drawable/rectangle_23" />

 
    <TextView
        android:id="@+id/textView6"
        android:layout_width="224dp"
        android:layout_height="24dp"
        android:fontFamily="serif"
        android:text="@string/zagolovok"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="@+id/imageView7"
        app:layout_constraintHorizontal_bias="0.132"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.127" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="172dp"
        android:layout_height="58dp"
        android:fontFamily="serif"
        android:text="@string/n"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="@+id/imageView7"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="135dp"
        android:layout_height="44dp"
        android:backgroundTint="@color/darkBoloto"
        android:fontFamily="sans-serif"
        android:text="@string/podrobno"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="@+id/imageView7"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.837"
        tools:ignore="SmallSp" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="176dp"
        android:layout_height="140dp"
        android:contentDescription="@string/todo10"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="@+id/imageView7"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="@+id/imageView7"
        app:layout_constraintTop_toTopOf="@+id/imageView7"
        app:layout_constraintVertical_bias="0.453"
        app:srcCompat="@drawable/_844687_removebg_preview_1" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.283"
        app:srcCompat="@drawable/rect"
        android:contentDescription="@string/todo12" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/imageView13"
        app:layout_constraintEnd_toEndOf="@+id/imageView13"
        app:layout_constraintStart_toStartOf="@+id/imageView13"
        app:layout_constraintTop_toTopOf="@+id/imageView13"
        app:srcCompat="@drawable/vector__6_"
        android:contentDescription="@string/todo13" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toEndOf="@+id/imageView13"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.286"
        app:srcCompat="@drawable/rect"
        android:contentDescription="@string/todo14" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/imageView15"
        app:layout_constraintEnd_toEndOf="@+id/imageView15"
        app:layout_constraintStart_toStartOf="@+id/imageView15"
        app:layout_constraintTop_toTopOf="@+id/imageView15"
        app:srcCompat="@drawable/relax"
        android:contentDescription="@string/todo15" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toEndOf="@+id/imageView15"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.286"
        app:srcCompat="@drawable/rect"
        android:contentDescription="@string/todo16" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/imageView17"
        app:layout_constraintEnd_toEndOf="@+id/imageView17"
        app:layout_constraintStart_toStartOf="@+id/imageView17"
        app:layout_constraintTop_toTopOf="@+id/imageView17"
        app:srcCompat="@drawable/vector__7_"
        android:contentDescription="@string/todo17" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.671"
        app:layout_constraintStart_toEndOf="@+id/imageView17"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.283"
        app:srcCompat="@drawable/rect"
        android:contentDescription="@string/todo18" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="41dp"
        android:layout_height="71dp"
        android:contentDescription="@string/todo19"
        app:layout_constraintBottom_toTopOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="@+id/imageView19"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="@+id/imageView19"
        app:layout_constraintTop_toTopOf="@+id/imageView19"
        app:layout_constraintVertical_bias="0.166"
        app:srcCompat="@drawable/anxious" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="89dp"
        android:layout_height="24dp"
        android:text="@string/spok"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView13"
        app:layout_constraintVertical_bias="0.002" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="124dp"
        android:layout_height="22dp"
        android:text="@string/raslb"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.268"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView15"
        app:layout_constraintVertical_bias="0.002" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="100dp"
        android:layout_height="24dp"
        android:text="@string/sosred"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.646"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView17"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="108dp"
        android:layout_height="22dp"
        android:text="@string/vzolnov"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="@+id/imageView19"
        app:layout_constraintVertical_bias="0.132" />

    <ImageView
        android:id="@+id/imageView29"
        android:layout_width="144dp"
        android:layout_height="90dp"
        android:contentDescription="@string/todo21"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/imageView31"
        android:layout_width="53dp"
        android:layout_height="40dp"
        android:contentDescription="@string/todo23"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        app:srcCompat="@drawable/sound" />

    <ImageView
        android:id="@+id/imageView32"
        android:layout_width="59dp"
        android:layout_height="46dp"
        android:contentDescription="@string/todo24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toEndOf="@+id/imageView31"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        app:srcCompat="@drawable/profile" />

    <ImageView
        android:id="@+id/imageView34"
        android:layout_width="136dp"
        android:layout_height="93dp"
        android:contentDescription="@string/todo25"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.996"
        app:srcCompat="@drawable/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>